--- a/lcs-service/pom.xml
+++ b/lcs-service/pom.xml
@@ -8,22 +8,25 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>lcs-repository</artifactId>
-    <packaging>jar</packaging>
+
+    <artifactId>lcs-service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <lcs.common.version>1.0.0</lcs.common.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>org.example.lcs</groupId>
+            <artifactId>lcs-repository</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.example.lcs</groupId>
             <artifactId>lcs-common</artifactId>
-            <version>${lcs.common.version}</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
-
 
 </project>
