--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.example.lcs</groupId>
     <artifactId>Super_Market_Loyalty_System</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
@@ -12,6 +12,7 @@
         <module>lcs-repository</module>
         <module>lcs-api</module>
         <module>lcs-common</module>
+        <module>lcs-service</module>
     </modules>
 
     <properties>
