added  earn logic

--- a/lcs-repository/pom.xml
+++ b/lcs-repository/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>lcs-common</artifactId>
             <version>${lcs.common.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.example.lcs</groupId>
+            <artifactId>lcs-common</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.example.lcs</groupId>
+            <artifactId>lcs-common</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
